[gd_scene load_steps=17 format=3 uid="uid://l13vchhleoe"]

[ext_resource type="Script" uid="uid://c0r7kgn78tu7p" path="res://_Scripts/Enemys/enemy_base.gd" id="1_4xm5x"]
[ext_resource type="PackedScene" uid="uid://c3n3lclyap3ek" path="res://Prefabs/Characters/Enemys/patrulla.tscn" id="2_cthm0"]
[ext_resource type="Texture2D" uid="uid://dbtlowgyredns" path="res://Recursos/Sprites/Enemys/Enemigo2.png" id="2_fvfmx"]
[ext_resource type="PackedScene" uid="uid://c00f00wc0vjva" path="res://Componentes/health_component.tscn" id="3_obccg"]
[ext_resource type="PackedScene" uid="uid://b25ondfso70wi" path="res://Componentes/hitbox_component.tscn" id="4_1bku7"]
[ext_resource type="Script" uid="uid://cshpp8nqexl4g" path="res://_Scripts/Enemys/animation_enemy_base.gd" id="5_m445v"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_broj1"]
size = Vector2(26, 48)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_mtnhx"]
size = Vector2(24, 33)

[sub_resource type="Animation" id="Animation_nad3n"]
resource_name = "attack"
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0666667, 0.133333, 0.2, 0.3, 0.366667, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [14, 15, 16, 17, 18, 19, 20]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimationPlayer")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.6),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"end_of_attack_anim"
}]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.3),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"instance_attack"
}]
}

[sub_resource type="Animation" id="Animation_cthm0"]
resource_name = "death"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [24, 25, 26, 27, 28, 29, 30, 31, 32]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(1),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"queue_free"
}]
}

[sub_resource type="Animation" id="Animation_fvfmx"]
resource_name = "hit"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [10]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(0.863185, 0, 0.0276622, 1), Color(1, 1, 1, 1)]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("AnimationPlayer")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.4),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"end_of_attack_anim"
}]
}

[sub_resource type="Animation" id="Animation_x1cba"]
resource_name = "idle"
length = 1.5
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.366667, 0.766667, 1.2),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}

[sub_resource type="Animation" id="Animation_q5nok"]
resource_name = "jump"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [9]
}

[sub_resource type="Animation" id="Animation_m82oa"]
resource_name = "walk"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.133333, 0.266667, 0.4, 0.6, 0.8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [6, 7, 8, 9, 10, 11]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_25k1n"]
_data = {
&"attack": SubResource("Animation_nad3n"),
&"death": SubResource("Animation_cthm0"),
&"hit": SubResource("Animation_fvfmx"),
&"idle": SubResource("Animation_x1cba"),
&"jump": SubResource("Animation_q5nok"),
&"walk": SubResource("Animation_m82oa")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_5tl6s"]
radius = 149.003

[node name="EnemyBase" type="CharacterBody2D"]
collision_layer = 4
collision_mask = 39
script = ExtResource("1_4xm5x")
speed = 5800.0
player_health_recover = 20.0
attack_pos_left = Vector2(-19, -7)
attack_pos_right = Vector2(16, -7)
attack_path = "res://Prefabs/AttackTraces/enemy_punch3_trace.tscn"

[node name="Patrulla" parent="." instance=ExtResource("2_cthm0")]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-2, -9)
shape = SubResource("RectangleShape2D_broj1")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(0, -21)
scale = Vector2(1.50859, 1.50859)
texture = ExtResource("2_fvfmx")
hframes = 6
vframes = 6
frame = 32

[node name="HealthComponent" parent="." instance=ExtResource("3_obccg")]

[node name="HitboxComponent" parent="." instance=ExtResource("4_1bku7")]
position = Vector2(0, -8)
scale = Vector2(1.23539, 1.56865)
collision_layer = 4
collision_mask = 10

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitboxComponent"]
position = Vector2(-2, -1.5)
shape = SubResource("RectangleShape2D_mtnhx")

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]
radius = 20.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_25k1n")
}
script = ExtResource("5_m445v")

[node name="SightArea" type="Area2D" parent="."]
scale = Vector2(0.6065, 0.6065)
collision_layer = 4
collision_mask = 34

[node name="CollisionShape2D" type="CollisionShape2D" parent="SightArea"]
shape = SubResource("CircleShape2D_5tl6s")

[node name="RayCast2D" type="RayCast2D" parent="SightArea"]
target_position = Vector2(143.446, 0)
collision_mask = 3

[node name="FallCast" type="RayCast2D" parent="."]
position = Vector2(12, 20)
target_position = Vector2(0, 17)
hit_from_inside = true

[node name="VisibleOnScreenEnabler2D" type="VisibleOnScreenEnabler2D" parent="."]
position = Vector2(-2.5, -9.5)
scale = Vector2(1.25, 2.35)

[connection signal="body_entered" from="SightArea" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="SightArea" to="." method="_on_area_2d_body_exited"]
